feature: 체크리스트 저장에서 위험도, 메모 추가