@@ -7,6 +7,7 @@ import com.example.liskovbackend.dto.checklist.response.*;
 import com.example.liskovbackend.dto.gpt.request.GptChecklistGenerateRequest;
 import com.example.liskovbackend.entity.Checklist;
 import com.example.liskovbackend.entity.ChecklistItem;
+import com.example.liskovbackend.entity.Severity;
 import com.example.liskovbackend.global.exception.AiNoResponseException;
 import com.example.liskovbackend.global.exception.ResourceAlreadyExistsException;
 import com.example.liskovbackend.global.exception.ResourceNotFoundException;
@@ -72,14 +73,16 @@ public class ChecklistService {
                 .items(null)
                 .build();
 
-        var contents = request.contents();
+        var itemsDto = request.items();
 
-        var savedChecklistItems = contents.stream()
-                .map(content -> ChecklistItem.builder()
+        var savedChecklistItems = itemsDto.stream()
+                .map(itemDto -> ChecklistItem.builder()
                         .checklist(checklist)
-                        .content(content)
+                        .content(itemDto.content())
+                        .severity(Severity.valueOf(itemDto.severity()))
+                        .memo(itemDto.memo())
                         .build())
-                .toList();
+                .collect(Collectors.toList());
 
         checklistItemRepository.saveAll(savedChecklistItems);
 
